deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: denis-hello

  labels:

    app: service3

spec:

  replicas: 1

  selector:

    matchLabels:

      app: service3

  template:

    metadata:

      labels:

        app: service3

    spec:

      containers:

      - name: service3
        
        image: service3:0.6

        imagePullPolicy: IfNotPresent

        ports:

        - containerPort: 80
