ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: denis-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /    
        pathType: Prefix
        backend:
          service:
            name: service3
            port:
              number: 80
